Fix bug for blog business
